[package]
name = "rust_token_exchange"
version = "0.1.0"
authors = ["opmmr <opmmr2211@google.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "postgres", "macros"] }
web3 = "0.15.0"
log = "0.4"
env_logger = "0.9"
